@@ -1,3 +1,9 @@
+2004-05-19  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclTest.c (TestgetintCmd): Made the tests in get.test check
+	* tests/get.test:		     Tcl_GetInt() since the core now
+					     avoids that function.
+
 2004-05-18  Kevin B. Kenny  <kennykb@acm.org>
 
 	* compat/strftime.c (_fmt, ISO8601Week):
